--- a/packages/page-builder/src/containers/CollectionPage/styles.scss
+++ b/packages/page-builder/src/containers/CollectionPage/styles.scss
@@ -64,7 +64,7 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   .app-main {
     .app-container {
-      padding: 0 16px;
+      padding: 0 var(--gap);
     }
   }
 }
